# dorkgen

./: AUDIT.md  README.md  pyproject.toml  requirements.txt
dorkgen/: __init__.py  __main__.py  cli.py  config.py  constants.py  engine.py  exporters.py  generator.py  keywordpacks.py  main.py  models.py  operators.py  profiles.py  scoring.py  screens.py  templates.py  ui.py  utils.py  validators.py
tests/: test_exporters.py  test_generator.py  test_profiles.py  test_scoring.py  test_validators.py
