[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dorkgen"
version = "3.0.0"
description = "DorkGEN - The Ultimate Google Dork Intelligence Framework"
readme = "README.md"
authors = [{name = "HackerAI"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "pyfiglet>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
dorkgen = "dorkgen:main"

[tool.setuptools.packages.find]
include = ["dorkgen*"]
